# airo-ros

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  prepare_build.sh
.devcontainer/: devcontainer.json
.docker/: dev.dockerfile
.github/workflows/: ci-build-ws.yml  ci-format.yml  ci.yaml  format.yaml
ROS/src/: ugly_python.py
ROS/src/grippers/robotiq_85/: prepare_build.sh  robotiq_85.repos
ROS/src/moveit/: non_released_dependencies.repos  prepare_build.sh
ROS/src/moveit/airo_moveit_mgi_bridge/: CMakeLists.txt  package.xml  readme.md
ROS/src/moveit/airo_moveit_mgi_bridge/examples/: execute_cartesian_path.py  get_pose.py
ROS/src/moveit/airo_moveit_mgi_bridge/launch/: mgi_bridge.launch.py
ROS/src/moveit/airo_moveit_mgi_bridge/src/: airo_moveit_mgi_bridge.cpp
ROS/src/moveit/airo_moveit_mgi_bridge_msgs/: CMakeLists.txt  package.xml
ROS/src/moveit/airo_moveit_mgi_bridge_msgs/srv/: ExecuteCartesianPath.srv  GetFramePose.srv  MoveToPose.srv
ROS/src/moveit/airo_moveit_utils/: CMakeLists.txt  package.xml  readme.md
ROS/src/moveit/airo_moveit_utils/src/: transform_streamer.cpp
ROS/src/moveit/airo_teleop_joy/: package.xml  readme.md  setup.cfg  setup.py
ROS/src/moveit/airo_teleop_joy/airo_teleop_joy/: joystick.py  teleop_joy_node.py
ROS/src/moveit/moveit_mgi_bridge/: CMakeLists.txt  package.xml
ROS/src/moveit/moveit_mgi_bridge/src/: mgi_bridge.cpp
ROS/src/robot_gripper_combinations/ur_robotiq_85_bringup/: CMakeLists.txt
ROS/src/robot_gripper_combinations/ur_robotiq_85_bringup/launch/: ur_robotiq_85_moveit.launch.py
ROS/src/robot_gripper_combinations/ur_robotiq_85_moveit_config/config/: controllers.yaml
ROS/src/robot_gripper_combinations/ur_robotiq_85_moveit_config/srdf/: robotiq_85.srdf.xacro
ROS/src/robot_gripper_configurations/ur_robotiq_85/: readme.md
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_bringup/: CMakeLists.txt  package.xml
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_bringup/launch/: ur_robotiq_85_control.launch.py  ur_robotiq_85_moveit.launch.py
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_description/: CMakeLists.txt  package.xml
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_description/launch/: view_ur_robotiq_85.launch.py
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_description/urdf/: ur_robotiq_85.urdf.xacro
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_moveit_config/: CMakeLists.txt  package.xml
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_moveit_config/config/: controllers.yaml  ompl_planning.yaml
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_moveit_config/rviz/: view_robot.rviz
ROS/src/robot_gripper_configurations/ur_robotiq_85/ur_robotiq_85_moveit_config/srdf/: robotiq_85.srdf.xacro  ur_robotiq_85.srdf.xacro
ROS/src/robots/UR/: UR_ROS2_galactic_non-released.repos  build_drivers.sh  prepare_build.sh  readme.md
ROS/src/teleop/teleop_joy/: package.xml  setup.py
ROS/src/teleop/teleop_joy/teleop_joy/: joystick.py  teleop_joy_node.py
doc/: information-sources.md  moveit-architecture.md  moveit-motion-planning.md  moveit-servo.md  ros2-control.md
