<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>airo_teleop_joy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thomas.lips@ugent.be">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <exec_depend>joy</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
